# myworks

./: .gitignore  Makefile  README.md  aodv.c  aodv.h  aodv.sky  aodv_20_nodes.csc  git commands.txt  readme.txt  scaling_placement.md
code/scenarios/: CMakeLists.txt
code/scenarios/InTAS/scenario/: InTAS_full_poly.sumocfg  InTAS_reduced.sumocfg  buildings_reduced.poly.xml  omnetpp.ini
code/scenarios/InTAS/scenario/config/: etsi_mode3_p100.ini  etsi_mode3_p25.ini  etsi_mode3_p50.ini  etsi_mode3_p75.ini  etsi_mode4_p100.ini  etsi_mode4_p25.ini  etsi_mode4_p50.ini  etsi_mode4_p75.ini  fixed300ms_mode3_p100.ini  fixed300ms_mode3_p25.ini  fixed300ms_mode3_p50.ini  fixed300ms_mode3_p75.ini  fixed300ms_mode4_p100.ini  fixed300ms_mode4_p25.ini  fixed300ms_mode4_p50.ini  (+1 more)
code/scenarios/InTAS_reduced_map_gen/scenario/: InTAS_reduced.sumocfg  buildings_reduced.poly.xml
code/scenarios/cpenvmod/: omnetpp.ini  sensors.xml  services-envmod.xml  services-mco.xml  services.xml
code/scenarios/test_InTAS/scenario/: InTAS.simulation.statistic.xml  InTAS.simulation.summary.xml  InTAS.simulation.tripinfo.xml  InTAS_reduced.sumocfg  buildings_reduced.poly.xml  enodeb_poi.add.xml  ingolstadt_rtest.net.xml  omnetpp.ini  trips.xml  trips_new.xml
code/scenarios/test_sensor/: enodeb_poi.add.xml  obstacles.poly.xml  omnetpp.ini  straight_line.rou.xml
master_thesis/code/scenarios/: CMakeLists.txt
master_thesis/code/scenarios/cpenvmod/: services-envmod.xml  services-mco.xml
master_thesis/code/scenarios/test_sensor/: sensors.xml  straight_line.net.xml  straight_line.sumocfg
(+986 files in other folders)
